Moved the DB references from right to left side to avoid feature flags covering db refs

--- a/client/src/app.less
+++ b/client/src/app.less
@@ -236,6 +236,7 @@ body #app * {
 .toplevel {
   display: flex;
   flex-direction: column;
+  position: relative;
   width: max-content;
   min-width: @toplevel-min-width;
   padding: 4px;
@@ -390,22 +391,17 @@ body #app * {
     }
   }
 }
+.use-wrapper{
+  &.fade{
+    opacity: 0.3;
+  }
 
-.usages {
-  position: absolute;
-  left: calc(~"100% + 30px");
-  
-  display: flex;
-  flex-direction: column;
-
-}
-
-.used-in {
-  position: absolute;
-  left: calc(~"100% + 30px");
-
-  display: flex;
-  flex-direction: column;
+  .usages, .used-in  {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-right: 10px;
+  }
 }
 
 .ref-block {
@@ -1797,6 +1793,7 @@ body #app * {
 .sidebar-box {
   background: @black1;
   position: relative;
+  display: flex;
 }
 
 .documentation-box {
